# csv-quality-gate

./: AGENTS.md  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
src/csv_quality_gate/: cli.py
